--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <div class="header-title">UFV WEB FRONTEND WORKSHOP 16: Home</div>
         <div class="header-logo">
             <a href="https://www.ufv.es" target="_blank">
-                <img src="images/Logo_UFV.jpg" alt="Logo UFV">
+                <img src="docs/images/Logo_UFV.jpg" alt="Logo UFV">
             </a>
         </div>
     </header>
@@ -204,10 +204,10 @@
     <!-- Barra de navegación -->
     <nav>
         <a href="#" class="active">Home</a>
-        <a href="public/about.html">About</a>
-        <a href="public/contact.html">Contact</a>
-        <a href="public/net.html">Net</a>
-        <a href="public/offtopic.html">Offtopic</a>
+        <a href="docs/public/about.html">About</a>
+        <a href="docs/public/contact.html">Contact</a>
+        <a href="docs/public/net.html">Net</a>
+        <a href="docs/public/offtopic.html">Offtopic</a>
     </nav>
 
     <!-- Breadcrumbs -->
@@ -224,8 +224,8 @@
                 <li>
                     <a href="#" onclick="toggleSubjects('course1')"><strong>Year 1</strong></a>
                     <ul id="course1" class="hidden">
-                        <li><a href="public/curso1.html">General</a></li>
-                        <li><a href="public/Fundamentos_De_Informatica.html">Fundamentals of Computer Engineering</a></li>
+                        <li><a href="docs/public/curso1.html">General</a></li>
+                        <li><a href="docs/public/Fundamentos_De_Informatica.html">Fundamentals of Computer Engineering</a></li>
                         <li><a href="#">Collage</a></li>
                         <li><a href="#">Logic and Critical Thinking</a></li>
                         <li><a href="#">Financial Accounting</a></li>
@@ -239,7 +239,7 @@
                 <li>
                     <a href="#" onclick="toggleSubjects('course2')"><strong>Year 2</strong></a>
                     <ul id="course2" class="hidden">
-                        <li><a href="public/curso2.html">General</a></li>
+                        <li><a href="docs/public/curso2.html">General</a></li>
                         <li><a href="#">Microeconomy</a></li>
                         <li><a href="#">Introduction to Statistics and Probability </a></li>
                         <li><a href="#">History of Science and Technology</a></li>
@@ -255,7 +255,7 @@
                 <li>
                     <a href="#" onclick="toggleSubjects('course3')"><strong>Year 3</strong></a>
                     <ul id="course3" class="hidden">
-                        <li><a href="public/curso3.html">General</a></li>
+                        <li><a href="docs/public/curso3.html">General</a></li>
                         <li><a href="#">Microeconomy</a></li>
                         <li><a href="#">Introduction to Statistics and Probability </a></li>
                         <li><a href="#">History of Science and Technology</a></li>
@@ -271,7 +271,7 @@
                 <li>
                     <a href="#" onclick="toggleSubjects('course4')"><strong>Year 4</strong></a>
                     <ul id="course4" class="hidden">
-                        <li><a href="public/curso4.html">General</a></li>
+                        <li><a href="docs/public/curso4.html">General</a></li>
                         <li><a href="#">Microeconomy</a></li>
                         <li><a href="#">Introduction to Statistics and Probability </a></li>
                         <li><a href="#">History of Science and Technology</a></li>
@@ -287,7 +287,7 @@
                 <li>
                     <a href="#" onclick="toggleSubjects('course5')"><strong>Year 5</strong></a>
                     <ul id="course5" class="hidden">
-                        <li><a href="public/curso5.html">General</a></li>
+                        <li><a href="docs/public/curso5.html">General</a></li>
                         <li><a href="#">Datathon with Social Impact</a></li>
                         <li><a href="#">Business Intelligence</a></li>
                         <li><a href="#">Quality Management</a></li>
@@ -319,10 +319,10 @@
     <footer>
         <div class="footer-icons">
             <a href="https://linkedin.com" target="_blank">
-                <img src="images/linkedin_logo.png" alt="Logo LinkedIn">
+                <img src="docs/images/linkedin_logo.png" alt="Logo LinkedIn">
             </a>
             <a href="https://github.com" target="_blank">
-                <img src="images/GitHub_logo_2013.jpg" alt="Logo GitHub">
+                <img src="docs/images/GitHub_logo_2013.jpg" alt="Logo GitHub">
             </a>
             <p>&copy; 2024 UFV </p>
         </div>
