--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home</title>
-
+<meta http-equiv="Refresh" content="2; url=public/index.html">
     <!-- Estilos -->
     <style>
         /* Estilos globales */
